--- a/portfolio.css
+++ b/portfolio.css
@@ -442,3 +442,9 @@ CARDS
   opacity: 1;
   transition-delay: 0.5s;
 }
+
+.github-repo {
+  margin-left: 45%;
+  font-size: 200%;
+  color: black;
+}
