--- a/portfolio.css
+++ b/portfolio.css
@@ -338,11 +338,11 @@ footer p {
 
 @media only screen and (max-width: 550px) {
   .skills {
-    width: 100%;
+    width: 100% !important;
   }
 
   .process {
-    width: 100%;
+    width: 100% !important;
   }
 }
 
