--- a/portfolio.css
+++ b/portfolio.css
@@ -288,6 +288,11 @@ footer p {
   list-style: none;
 }
 
+.projects {
+  width: 80% !important;
+  margin-left: 9% !important;
+}
+
 @media only screen and (max-width: 1300px) {
   .projects {
     width: 80% !important;
@@ -353,18 +358,19 @@ footer p {
   width: 25%;
   height: 500px;
   margin-bottom: 100px;
-  background: #000;
+  background: #be00fe;
   box-shadow: 0 30px 30px rgba(0, 0, 0, 0.5);
   float: left;
 }
 
 .built-with-list {
   margin-left: 10%;
-  margin-top: 10%;
+  margin-top: 7%;
 }
 
 .built-with-list-item {
-  margin-top: 10%;
+  margin-top: 5%;
+  font-size: 105%;
 }
 
 .card-box .imgBx {
@@ -381,7 +387,7 @@ footer p {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: 0.5s;
 }
 
@@ -398,7 +404,6 @@ footer p {
   background: #fff;
   transition: 0.5s;
   overflow: hidden;
-
   padding: 15px;
   box-sizing: border-box;
 }
