--- a/portfolio.css
+++ b/portfolio.css
@@ -94,6 +94,8 @@ h1 {
 .main-nav li a:active {
   color: #be00fe;
   border-bottom: 2px solid #09fbd3;
+  font-size: 1.1rem;
+  transition: 0.5s;
 }
 
 .btn:link,
