--- a/portfolio.css
+++ b/portfolio.css
@@ -360,7 +360,7 @@ footer p {
   width: 25%;
   height: 500px;
   margin-bottom: 100px;
-  background: #be00fe;
+  background: black;
   box-shadow: 0 30px 30px rgba(0, 0, 0, 0.5);
   float: left;
 }
