--- a/portfolio.css
+++ b/portfolio.css
@@ -388,13 +388,10 @@ footer p {
   height: 100%;
 }
 
-.card-box .imgBx img {
-  position: absolute;
-  top: 0;
-  left: 0;
+.project-image {
+  position: relative;
   width: 100%;
   height: 100%;
-  object-fit: contain;
   transition: 0.5s;
 }
 
